test/data/resolver/valid/set_property_literal.cypher
MATCH (n:Person) SET n.age = 42 RETURN n
