test/data/resolver/invalid/set_property_unknown_property.cypher
MATCH (n:Person) SET n.notAProp = 1 RETURN n
